# lottery_2603

./: CLAUDE.md  new_res.json  res.json  로또 회차별 당첨번호_20260326203220.xlsx
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-data-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/phases/02-time-decay-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-prediction-pipeline-vertical-slice/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/schemas/: lottery.py  reflection.py  statistics.py
backend/app/services/: data_loader.py  decay_engine.py  reflection_service.py  statistics_service.py
backend/app/strategies/: __init__.py  balance.py  base.py  composite.py  frequency.py  pattern.py  range.py
backend/tests/: conftest.py  test_api.py  test_balance_strategy.py  test_composite_strategy.py  test_data_loader.py  test_decay_engine.py  test_frequency_strategy.py  test_integration.py  test_pattern_strategy.py  test_range_strategy.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+94 files in other folders)
